# tally

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  main.rs
src-tauri/src/tests/: database_tests.rs  mod.rs
src/components/: AccountDetail.vue  AccountForm.vue  AccountItem.vue  AccountManagement.vue  CategoryForm.vue  CategoryManagement.vue  Dashboard.vue  Modal.vue  Sidebar.vue  TransactionForm.vue
src/router/: index.js
