[package]
name = "tally"
version = "0.1.0"
description = "A personal finance tracking application"
authors = ["Michael Zaerr"]
license = ""
repository = ""
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
